# kubernetes-events

./: Cargo.toml  README.md
deployment/manifests/: localdev-kind-config.yaml  registry-kind-config.yaml  test-service.yaml
deployment/scripts/: setup.bash
src/: main.rs
